--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+#root {
+    background-image: url('assets/vecteezy_abstract-colorful-liquid-shape-background_6573711.jpg');
+   
+    background-size: 100% 100%; 
+    background-repeat: no-repeat; 
+   
+  
+}
 
